--- a/src/Components/Layout/MainArea/FleetPage/CategoryPage/CategoryPage.css
+++ b/src/Components/Layout/MainArea/FleetPage/CategoryPage/CategoryPage.css
@@ -123,13 +123,20 @@
     color: #A73121;
     scale: 1.03;
 }
-
+.CategoryPage .headers-container{
+    display: flex;
+    justify-content: space-between;
+}
 .CategoryPage .filter-container h2 {
     grid-column: span 4;
     margin-top: 0;
     color: black;
     cursor: pointer;
 }
+.CategoryPage .filter-container h2:nth-of-type(1) {
+    width: 95%;
+}
+
 
 .CategoryPage .filter-container h2:hover {
     color: white;
