--- a/src/Components/Layout/MainArea/HomePage/WhyUs/WhyUs.css
+++ b/src/Components/Layout/MainArea/HomePage/WhyUs/WhyUs.css
@@ -9,6 +9,11 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    /* justify-content: space-evenly; */
     align-items: center;
+}
+.WhyUs .WhyUsContent img{
+    width: 750px;
+    /* width: 320px; */
 }
