--- a/src/Components/Layout/MainArea/AboutUs/AboutUs.css
+++ b/src/Components/Layout/MainArea/AboutUs/AboutUs.css
@@ -22,7 +22,7 @@
     font-weight: 400;
 }
 
-.AboutUs img {
+.AboutUs .profile-pic {
     width: 400px;
     border-radius: 50%;
     /* border: 2px solid #952323; */
@@ -74,7 +74,10 @@
     height: 50px;
 }
 
-
+.icon{
+    width: 40px;
+    padding: 0px 6px;
+}
 
 /* body{background-color:#000; overflow:hidden;} */
 
